- Fixed flickering during Fassad's low voice speech
- Fixed issue with Claus' PP if the first battle is lost
- Fixed wrong text being displayed for the train's requested money
- Fixed issue with Thomas disappearing in Chapter 1 after the notebook is collected
- Fixed issue with mouse talking directly to humans
- Fixed Debug Room's Pigmask changing sprite in certain situations
- Standardized Boney's minimum level during Chapter 4
- Fixed issue with Mementoes being used while in the inventory
- Fixed issue with Leder's counter ticking when it shouldn't and viceversa
- Fixed 0 damage being reported as > 0 if comboes are used
- Fixed minor graphical issues within some menus
- Fixed Nana's age in Chapter 8's concert
- Fixed Caroline's bakery causing inventory issues in Chapters 1 through 3
- Fixed the Delete All Saves menu's lag
- Fixed issue with quickly opening and closing maps


Improvements:
- Optimized text printing in menus for a smoother experience
- Reduced the load on the GBA's CPU in certain menus in order to ensure a smoother experience
- Added NPC in the Debug Room
--- It allows accessing the other tables of the Debug Room
--- It allows viewing the Attract Mode sequences
--- Other useful features
- Improved Debug Room's Staff roll option
- Made it so all the Memoes can be seen
- Made it so the mother mouse's text is different if only one mouse is missing
- Changed "BOM" to "BOOM"
- Updated some enemies' sprites to match the translation
- Restored a trade with a ghost in the castle's kitchen
- Made consuming cheese consistent for Claus

For the other translations:
- Made it easier for future translations to edit graphics
- Allowed more text per line and per screen in the Memoes menu
- Allowed more text per screen in the overworld notebooks
- Lowered the OAM footprint of names in the overworld
- Added guideline that shows which enemy uses which battle text line
- Added enemy articles in the main script
- Added program that allows for more custom text lines