@@ -64,3 +64,4 @@ For the other translations:
 - Added guideline that shows which enemy uses which battle text line
 - Added enemy articles in the main script
 - Added program that allows for more custom text lines
+- Added script that makes sure inserted files don't overlap
